# mifi-finances

./: README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci-cd.yml
backend/: .env.template  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  dependencies.py  main.py  pyproject.toml  ruff.toml  tach.toml
backend/api/: params.py  responses.py
backend/api/v1/: router.py
backend/api/v1/endpoints/: analytics.py  auth.py  banks.py  ping.py  transactions.py  users.py
backend/core/: config.py  logging.py  security.py  validators.py
backend/db/: pg_custom_types.py  session.py
backend/dependencies/: db.py  params.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: 2743d04ad79a_add_time_fields.py  3e3ee1116b25_make_bank_name_unique.py  53dd2e9dcc84_add_user_field_to_transaction.py  7064086b6a48_add_transation_related_tables.py  7cf4d35a549b_update_user_fields.py  939d2c4e88e8_make_transaction_category_name_unique.py  d05c0682f79d_init.py  d7d496600d53_add_fields_to_user.py
backend/models/: bank.py  base.py  mixins.py  transaction.py  user.py
backend/schemas/: analytics.py  auth.py  banks.py  common.py  errors.py  transactions.py  users.py
backend/scripts/: coverage.sh  make_migrations.py  migrate.py  seed.py
backend/services/: analytics.py  auth.py  banks.py  common.py  crud.py  transactions.py  users.py
backend/services/analytics/: analytics.py  base.py
backend/services/analytics/queries/: dynamics_by_interval.sql
backend/tests/: conftest.py  test_main.py  utils.py
backend/tests/api/: conftest.py
backend/tests/api/endpoints/: test_auth.py  test_banks.py  test_ping.py  test_transactions.py  test_users.py
backend/tests/api/endpoints/transactions/: conftest.py  test_categories.py  test_transactions.py
backend/tests/api/schemas/: test_schematesis.py
backend/tests/api/services/: test_auth.py
backend/tests/api/services/transactions/: conftest.py  test_transaction_guard.py  test_transaction_service.py
backend/tests/core/: test_validators.py
backend/tests/migrations/: conftest.py  test_stairway.py
backend/tests/models/: test_mixins.py
backend/tests/schemas/: conftest.py  test_schemas.py  test_schematesis.py
backend/tests/services/: test_auth.py  test_crud.py
backend/tests/services/analytics/: conftest.py  test_base.py  test_dynamics_by_interval.py
backend/tests/services/transactions/: test_transaction_guard.py  test_transaction_service.py
documentations/: requirements.md
documentations/img/: requirements.md
frontend/: .env.development  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/nginx/: nginx.conf
frontend/src/: App.module.scss  App.tsx  index.css
frontend/src/api/: analytics.ts  axios.ts  bank.api.ts  transaction.api.ts  user.api.ts  utils.ts
frontend/src/components/Analytics/: Analytics.module.scss  Analytics.tsx  index.ts
frontend/src/components/AuthModal/: AuthModal.module.scss  AuthModal.tsx
frontend/src/components/FiltersModal/: FiltersModal.tsx  index.ts
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/TransactionCard/: TransactionCard.module.scss  TransactionCard.tsx  index.ts
frontend/src/components/TransactionFormModal/: TransactionFormModal.module.scss  TransactionFormModal.tsx  index.ts
frontend/src/hooks/analytics/: useGetDynamicsByInterval.ts
frontend/src/hooks/auth/: index.ts  useCreateAccaunt.ts  useIsAuth.ts  useLogin.ts  useLogout.ts
frontend/src/hooks/bank/: useAddBank.ts  useDeleteBank.ts  useGetBanks.ts
frontend/src/hooks/transaction/: useAddCategory.ts  useAddTransaction.ts  useCreateCategory.ts  useDeleteCategory.ts  useDeleteTransactionCategory.ts  useGetCategories.ts  useGetTransactions.ts  useUpdateTransaction.ts
frontend/src/hooks/user/: useGetUser.ts
frontend/src/pages/AdminPage/: AdminPage.module.scss  AdminPage.tsx  index.ts
frontend/src/pages/MainPage/: MainPage.module.scss  MainPage.tsx
frontend/src/utils/: const.ts  types.ts
infrastructure/nginx/: nginx.conf
(+7 files in other folders)
