[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "alembic-postgresql-enum>=1.7.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "greenlet>=3.1.1",
    "loguru>=0.7.3",
    "orjson>=3.10.16",
    "paracelsus>=0.8.0",
    "pydantic-extra-types[phonenumbers]>=2.10.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "asgi-lifespan==2.*",
    "coverage>=7.8.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "psycopg[binary]>=3.2.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-lazy-fixtures>=1.1.2",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.5",
    "schemathesis>=3.39.15",
    "sqlalchemy-utils>=0.41.2",
    "tach>=0.29.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
explicit_package_bases = true
strict = true
check_untyped_defs = true
exclude = [
    '^migrations/versions/*$',
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if typing.TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
