[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "alembic-postgresql-enum>=1.7.0",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "fastapi>=0.115.12",
    "fastapi-filter[sqlalchemy]>=2.0.1",
    "greenlet>=3.1.1",
    "loguru>=0.7.3",
    "orjson>=3.10.16",
    "paracelsus>=0.8.0",
    "pydantic-extra-types[phonenumbers]>=2.10.3",
    "pydantic-settings>=2.8.1",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "uvicorn-loguru-integration>=0.3.1",
    "uvloop>=0.21.0 ; sys_platform != 'win32'",
]

[dependency-groups]
dev = [
    "asgi-lifespan==2.*",
    "asyncpg-stubs>=0.30.1",
    "coverage>=7.8.0",
    "dotenv-linter>=0.7.0",
    "faker>=37.1.0",
    "httpx>=0.28.1",
    "mypy>=1.15.0",
    "psycopg[binary]>=3.2.6",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-lazy-fixtures>=1.1.2",
    "pytest-xdist>=3.6.1",
    "ruff>=0.11.5",
    "schemathesis>=3.39.15",
    "sqlalchemy-utils>=0.41.2",
    "tach>=0.29.0",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
explicit_package_bases = true
strict = true
check_untyped_defs = true
exclude = [
    '^migrations/versions/*$',
]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-markers", "--strict-config"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    # model_fields is accessed in sqlmodel, not in our code
    "ignore::pydantic.warnings.PydanticDeprecatedSince211:sqlmodel",
    # schemathesis bugs
    "ignore::DeprecationWarning:schemathesis",
    "ignore::DeprecationWarning:hypothesis_jsonschema",
    "ignore::hypothesis.errors.HypothesisSideeffectWarning:hypothesis",
]
xfail_strict = true

[tool.coverage.report]
exclude_also = [
    'pragma: no cover',
    'def __repr__',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if typing.TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]
